--- a/github/index.html
+++ b/github/index.html
@@ -300,7 +300,7 @@
 						</div>
 					</div>
 				</div>
-			</div> feedbacl-slideu
+			</div>
 	
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
@@ -321,7 +321,7 @@
 							
 							<button class="form-btn feedback-btn button" type="submit">Оставьте заявку</button>
 						</form>
-					</div> feedback-form
+					</div>
 				</div>
 			</div>
 		</div>
@@ -926,8 +926,8 @@
     <link rel="stylesheet" href="slick/slick-theme.css">
     <!-- Полключаем саму библиотеку slick slider-->
     <script src="slick/slick.min.js"></script>
-	<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> 
+	<link  href="fotorama/fotorama.css" rel="stylesheet">
+	<script src="fotorama/fotorama.js"></script> 
 	<script src="js/wow.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
 	<script>
