--- a/macter/index.html
+++ b/macter/index.html
@@ -273,32 +273,40 @@
 				Сколько стоит?
 			</h2>
 			<div class="row">
-				<div class="col-lg-5">
+				<div class="col-lg-5 col-lg-offset-1">
 					<div class="prise-block">
 						<div class="prise-text">
-							<h2 class="section-header">69 900 руб</h2>
-							<ul class="prise-list">
-								<li>Живой онлайн курс</li>
-								<li>Готовые материалы</li>
-							</ul>
+							<h2 class="section-header prise-header">69 900 руб</h2>
+							<div class="prise-list">
+								<p>Живой онлайн курс</p>
+								<p class="prise-plus"> + </p>
+								<p>Готовые материалы</p>
+							</div>
+							<button class="button prise-btn">Оплатить</button>
 						</div>
-					</div>
-				</div>
-				<div class="col-lg-1">
-					<div class="prise-equality">
-						=
 					</div>
 				</div>
 				<div class="col-lg-5">
 					<div class="prise-block">
 						<div class="prise-text">
 							<h2 class="section-header">99 900 руб</h2>
-							<ul class="prise-list">
-								<li>Живой онлайн курс</li>
-								<li>Готовые материалы</li>
-								<li>Личная часовая консультация</li>
-							</ul>
+							<div class="prise-list">
+								<p>Живой онлайн курс</p>
+								<p class="prise-plus"> + </p>
+								<p>Готовые материалы</p>
+								<p class="prise-plus"> + </p>
+								<p>Личная часовая консультация</p>
+							</div>
+							<button class="button prise-btn">Оплатить</button>
 						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-9 col-lg-offset-1">
+					<button class="button buy-btn">Купить курс</button>
+					<div class="circle-prise">
+						<img src="img/prise/circle-main.png">
 					</div>
 				</div>
 			</div>
@@ -308,32 +316,22 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6">
-					<div class="footer-bg">
-						<img width="600px" height="650px" src="img/footer/footer-bg.png" alt="footer-bg">
+				<div class="col-lg-1">
+					<div class="footer-logo">
+						<img src="img/main/logo.png" alt="Logo">
 					</div>
 				</div>
-				<div class="col-lg-6">
-					<div class="footer-form">
-						<h2 class="section-header">
-						Если вы готовы поработать, то записывайтесь
-						</h2>
-						<form action="#">
-							<input type="name" class="form-input" placeholder="Имя">
-							<input type="tel" class="form-input" placeholder="Телефон">
-							<input type="email" class="form-input" placeholder="Email">
-							<input type="text" class="form-input" placeholder="Промокод">
-							<button class="button form-btn">оплатить участие</button>
-						</form>
-						<div class="circle-form">
-							<img src="img/footer/circle-main.png">
-						</div>
+				<div class="col-lg-9">
+					<button class="footer-btn">Политика конфендиальности</button>
+				</div>
+				<div class="col-lg-2">
+					<div class="footer-text">
+						ИНН 12412124<br>
+						ОГРН 124125325
 					</div>
 				</div>
 			</div>
-			
 		</div>
-		
 	</footer>
 
 
