--- a/macter/index.html
+++ b/macter/index.html
@@ -43,7 +43,7 @@
 							</h1>
 							<p>3х дневный живой онлайн курс</p>
 						</div>
-						<button class="button">оплатить участие</button>
+						<button class="button main-btn">оплатить участие</button>
 						<div class="circle">
 							<img src="img/main/circle-main.png">
 						</div>
@@ -142,6 +142,30 @@
 					<div class="program-img">
 						<img src="img/program/program.png" alt="program">
 					</div>
+					<div class="program-block">
+						<div>
+							<div class="program-text">
+								<h2>7 апреля 2018</h2>
+								<ul>
+									<li>Расчитаете и создадите список фондов с процентами.</li>
+									<li>Научитесь эффективно распределять деньги в компании.</li>
+									<li>Расчитаете процент фонда оплаты труда от маржи вашей компании</li>
+								</ul>
+								<h2>14 апреля 2018</h2>
+								<ul>
+									<li>Пропишете документы с финансовой мотивацией для продавцов и производственников</li>
+									<li>Создадите статистику по каждому сотруднику , которая позволит оценивать и контролировать его продуктивность</li>
+								</ul>
+								<h2>21 апреля 2018</h2>
+								<ul>
+									<li>Пропишете документы с финансовой мотивацией для управляющего персонала</li>
+									<li>Подготовите презентацию и скрипт как продать безокладную систему оплаты труда старому и новому персоналу</li>
+									<li>Создадите таблицы для быстрого и легкого расчета заработной платы</li>
+									<li>Полностью готовы для внедрения мотвации.</li>
+								</ul>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -156,7 +180,7 @@
 			<div class="row">
 				<div class="material-block">
 					<div class="col-lg-6">
-					<div class="program-img">
+					<div class="material-img">
 						<img src="img/table/table.png" alt="table">
 					</div>
 					</div>
@@ -218,53 +242,125 @@
 			<h2 class="section-header">
 				Видеоотзывы участников
 			</h2>
+
+			<!-- Роман отзыв -->
 			<div class="review-slider">
 				<div class="review-slider_item">
 					<div class="row">
-						<div class="col-lg-5 col-lg-offset-1">
+						<div class="col-lg-6 col-lg-offset-1 col-xs-12">
 							<div class="video-player">
+							
 								<div class="video">
-									<iframe width="410" height="260" src="https://www.youtube.com/embed/VzQJytQXwfE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+									<iframe  src="https://www.youtube.com/embed/E3Dr6BBh4qE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-5 col-lg-offset-1">
+						<div class="col-lg-5  col-xs-12">
 							<div class="review-img">
-								<img src="img/review/review.png" alt="review">
-								<span>Инна Балашова</span>
+								<img src="img/review/roman.png" alt="review">
+								<span>Роман Чернышов</span>
 							</div>
 							<div class="review-text">
-								<h3>ООО “Рога и копыта”</h3>
-								<a href="#">Инна в Instagram (@InnaBalashova)</a>
+								<h3>Группа Компаний «Спутник</h3>
+								<a href="https://www.instagram.com/r0s/" target="_blank">Роман в Instagram (@r0s)</a>
 							</div>
 						</div>
 					</div>
 				</div>
+
+				<!-- Илья отзыв -->
 				<div class="review-slider_item">
 					<div class="row">
 						<div class="col-lg-5 col-lg-offset-1">
 							<div class="video-player">
 								<div class="video">
-									<iframe width="410" height="260" src="https://www.youtube.com/embed/VzQJytQXwfE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+									<iframe width="410" height="260" src="https://www.youtube.com/embed/AzgiA98w0RM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-5 col-lg-offset-1">
 							<div class="review-img">
-								<img src="img/review/review.png" alt="review">
-								<span>Инна Балашова</span>
+								<img src="img/review/ilya.png" alt="review">
+								<span>Ильи Абрамов</span>
 							</div>
 							<div class="review-text">
-								<h3>ООО “Рога и копыта”</h3>
-								<a href="#">Инна в Instagram (@InnaBalashova)</a>
+								<h3>ООО "ДНК"</h3>
+								<a href="https://www.instagram.com/iabramov/" target="_blank"> Илья в Instagram (@iabramov)</a>
 							</div>
 						</div>
 					</div>
 				</div>
-				
+
+				<!--Вячеслав отзыв -->
+				<div class="review-slider_item">
+					<div class="row">
+						<div class="col-lg-5 col-lg-offset-1">
+							<div class="video-player">
+								<div class="video">
+									<iframe width="410" height="260" src="https://www.youtube.com/embed/J15vYljtF8o" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-5 col-lg-offset-1">
+							<div class="review-img">
+								<img src="img/review/slava.png" alt="review">
+								<span>Вячеслав Сорокин</span>
+							</div>
+							<div class="review-text">
+								<h3>ООО "ТикетКом"</h3>
+								<a href="https://www.instagram.com/vyacheslav.sorokin/" target="_blank">Вячеслав Instagram (@vyacheslav.sorokin)</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!--Алексей отзыв -->
+				<div class="review-slider_item">
+					<div class="row">
+						<div class="col-lg-5 col-lg-offset-1">
+							<div class="video-player">
+								<div class="video">
+									<iframe width="410" height="260" src="https://www.youtube.com/embed/LuvKWAKQ9Fc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-5 col-lg-offset-1">
+							<div class="review-img">
+								<img src="img/review/alex.png" alt="review">
+								<span>Алексей Рудько</span>
+							</div>
+							<div class="review-text">
+								<h3>ООО "Курильский берег</h3>
+								<a href="https://www.instagram.com/_aleksei.rudko_/" target="_blank">Алексей Instagram (@_aleksei.rudko_)</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!--Ярослав отзыв -->
+				<div class="review-slider_item">
+					<div class="row">
+						<div class="col-lg-5 col-lg-offset-1 ">
+							<div class="video-player">
+								<div class="video">
+									<iframe width="410" height="260" src="https://www.youtube.com/embed/L41R4wJz9ZY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-5 col-lg-offset-1">
+							<div class="review-img">
+								<img src="img/review/yaroslav.png" alt="review">
+								<span>Ярослав Стеценко</span>
+							</div>
+							<div class="review-text">
+								<h3>ООО "ДОУМА"</h3>
+								<a href="https://www.instagram.com/yaroslav.stetsenko/" target="_blank">Ярослав Instagram (@yaroslav.stetsenko)</a>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>	
-	</div>
-		
+		</div>
 	</section>	
 	
 	<section class="prise">
@@ -287,7 +383,7 @@
 					</div>
 				</div>
 				<div class="col-lg-5">
-					<div class="prise-block">
+					<div class="prise-block block-right">
 						<div class="prise-text">
 							<h2 class="section-header">99 900 руб</h2>
 							<div class="prise-list">
@@ -297,16 +393,8 @@
 								<p class="prise-plus"> + </p>
 								<p>Личная часовая консультация</p>
 							</div>
-							<button class="button prise-btn">Оплатить</button>
+							<button class="button prise-btn prise-btn-right">Оплатить</button>
 						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-9 col-lg-offset-1">
-					<button class="button buy-btn">Купить курс</button>
-					<div class="circle-prise">
-						<img src="img/prise/circle-main.png">
 					</div>
 				</div>
 			</div>
@@ -336,141 +424,64 @@
 
 
 
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/jquery-3.2.0.min.js"></script>
     <!-- Подключаем стили slick slider -->
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
-    <!-- Полключаем саму библиотеку slick slider-->
+    <!-- Полключаем саму библиотеку slick slider -->
     <script src="slick/slick.min.js"></script>
 	<link  href="fotorama/fotorama.css" rel="stylesheet">
 	<script src="fotorama/fotorama.js"></script> 
-	<script src="js/wow.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
-	<script>
-		jQuery(function($){
-		   $("#phone").mask("+7(999) 999-9999");
-		   $("#phone2").mask("+7(999) 999-9999");
-		   $("#phone3").mask("+7(999) 999-9999");
-		   $("#pop_phone").mask("+7(999) 999-9999");
-		});
-	</script>
-	<script>
-		new WOW().init();
-	</script>
-	<!--<script>
-		$('form').submit(function(event) {
-			event.preventDefault();
-			$.ajax({
-				type: "POST",
-				url: "mailer/smart.php",
-				data: $(this).serialize()
-			}).done(function() {
-				$(this).find("input").val("");
-				alert("Заявка успешно отправлена");
-				$("form").trigger("reset");
-			});
-			return false;
-		});
-	</script>-->
-
 
     <!-- Инициализируем слайдер -->
-
     <script>
     	$(document).ready(function() {
 
-    		$('.popup-btn').on('click', function(event) {
-    			event.preventDefault();
-    			$('.popup').fadeIn();
-    		});
-    		$('.popup-close').on('click', function(event) {
-    			event.preventDefault();
-    			$('.popup').fadeOut();
-    		});
-    		// Допуслуги
-    		$('.prise-btn').on('click', function(event) {
-    			event.preventDefault();
-    			$('.popup-prise').fadeIn();	
-    			});
-    		$('.prise-close').on('click', function(event) {
-    			event.preventDefault();
-    			$('.popup-prise').fadeOut();	
-	    		});
-    		// Калькулятор
-    		$('.price-header-btn').on('click', function(event) {
-    			event.preventDefault();
-    			$('.calc-popup').fadeIn();	
-    			});
-    		$('.calc-close').on('click', function(event) {
-    			event.preventDefault();
-    			$('.calc-popup').fadeOut();	
-	    		});
-    		});
-
     		/* Слайдер с отзывами */
     		$('.review-slider').slick({
-    			prevArrow: '<button type="button" class="review-slider-btn review-prev-btn"></button>',
-    			nextArrow: '<button type="button" class="review-slider-btn review-next-btn"></button>'
+    			// prevArrow: '<button type="button" class="review-slider-btn review-prev-btn">dsad</button>',
+    			// nextArrow: '<button type="button" class="review-slider-btn review-next-btn"></button>'
     		});
-    		/*Слайдер с преимуществами */	
-		  $('.features-slider').slick({
-		  	 infinite: true,
-			 slidesToShow: 4,
-			 slidesToScroll: 1,
-			  responsive: [
+	
+		  });
+
+    </script>
+    <script>
+    	$('.review-slider').slick({
+		  infinite: false,
+		  slidesToShow: 1,
+		  slidesToScroll: 1,
+		  responsive: [
 		    {
-		      breakpoint: 991,
+		      breakpoint: 1024,
+		      settings: {
+		        slidesToShow: 3,
+		        slidesToScroll: 3,
+		        infinite: true,
+		        dots: true
+		      }
+		    },
+		    {
+		      breakpoint: 600,
 		      settings: {
 		        slidesToShow: 2,
-		        prevArrow: '<button class="prev arrow"></button>',
-		        nextArrow: '<button class="next arrow"></button>',
 		        slidesToScroll: 2
 		      }
 		    },
 		    {
-		      breakpoint: 767,
+		      breakpoint: 480,
 		      settings: {
 		        slidesToShow: 1,
-		        prevArrow: '<button class="prev arrow"></button>',
-		        nextArrow: '<button class="next arrow"></button>',
 		        slidesToScroll: 1
 		      }
 		    }
+		    // You can unslick at a given breakpoint now by adding:
+		    // settings: "unslick"
+		    // instead of a settings object
 		  ]
-		  });
-
-		  // Слайдер калькулятор 
-		  $('.calc-slider').slick( {
-		  		infinite: true,
-			 	slidesToShow: 1,
-			 	slidesToScroll: 1,
-		  });
-		  // $('.content-left').slick({
-		  // 	 infinite: true,
-			 // slidesToShow: 4,
-			 // slidesToScroll: 1,
-			 //  responsive: [
-		  //   {
-		  //     // breakpoint: 991,
-		  //     // settings: {
-		  //     //   slidesToShow: 2,
-		  //     //   prevArrow: '<button class="prev arrow"></button>',
-		  //     //   nextArrow: '<button class="next arrow"></button>',
-		  //     //   slidesToScroll: 2
-		  //     }
-		  //   },
-		  //   {
-		  //     // breakpoint: 767,
-		  //     // settings: {
-		  //     //   slidesToShow: 1,
-		  //     //   prevArrow: '<button class="prev arrow"></button>',
-		  //     //   nextArrow: '<button class="next arrow"></button>',
-		  //     //   slidesToScroll: 1
-		  //     }
-		  //   }
-		  // ]
-		  // });
+		});
     </script>
   </body>
 </html>
