добавил файлы dzhuzhba
добавил файлы dzhuzhba

--- a/dzhuzhba/contacts.html
+++ b/dzhuzhba/contacts.html
@@ -18,7 +18,7 @@
 
 <body>
 
-	<header class="_header _headerpages">
+	<header class="_header _headerpages _headcataloge">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3">
@@ -34,7 +34,7 @@
 						<a href="#">+7 (918) 256-09-03</a>
 						
 						</div>
-						<div class="_header_main_menu _newsmenu">
+						<div class="_header_main_menu _contactsmenu">
 							<nav>
 								<ul>
 									<li><a href="/index.html">Главная</a></li>
@@ -52,31 +52,38 @@
 			</div>
 		</div>
 	</header>
-	<section class="_about _news">
+	<section class="_about _contacts">
 		<div class="container">
-			<h2>Новости</h2>
-			<div class="row _about_info _news_info">
-				<div class="col-md-6 _news_info_block">
-					<p><b>Выпустили новую партию булочек с джемом.</b><br>
-Долго разрабатывали рецет, новая партия поступит на прилавки в течение недели.<br>
-Ждем Ваши отзывы, дорогие покупатели!</p>
-					<img src="img/news/news1.jpg" alt="">
-				</div>
-				<div class="col-md-6 _news_info_block">
-					<p><b>Заработала новая печь, производства Италия.</b><br>
-Теперь у нас открылись новые возможноти и это чудо-профессии. Мы с легкостью сделаем для Вас самую вкусную выпечку из этой печи. Отдаем все самое лучшее Вам!</p>
-					<img src="img/news/news1.jpg" alt="">
+			<h2>Контакты</h2>
+			<div class="row _contacts_block">
+				<div class="col-md-6">
+					<div class="_contacts_block_info">
+						<span>п. Джубга,<br>
+						ул. Советская, д.4</span>
+						<span>Тел: +7 918 045-09-08<br>
+Тел./Факс: +7 987 434-23-13</span>
+<span>Сайт: <a href="#">джубга-хлеб.рф</a><br>
+E-mail: info@djubgahle.ru</span>
+<span>WhatsApp: +7 918 680-09-03<br>
+Viber: +7 918 680-09-03</span>
+					</div>
+					<div class="_contacts_block_form">
+						<form action="#">
+							<h4>Написать нам</h4>
+							<input type="text" placeholder="Ваше имя:">
+							<input type="text" placeholder="Ваш телефон:">
+							<input type="text" placeholder="Напишите свой вопрос:">
+							<button>ОТПРАВИТЬ</button>
+						</form>
+					</div>
 				</div>
 			</div>
-			<h4>Все самое лучшее здесь</h4>
-			<div class="row _news_allbest">
-				<div class="col-md-4 _news_allbest_block"><a href="#"><img src="img/categories/bread.png" alt=""><span href="#">Хлеб</span></a></div>
-				<div class="col-md-4 _news_allbest_block"><a href="#"><img src="img/categories/cakes.png" alt=""><span href="#">Торты, пирожные</span></a></div>
-				<div class="col-md-4 _news_allbest_block"><a href="#"><img src="img/categories/cooperation.png" alt=""><span href="#">Булочки</span></a></div>
+			<div class="_contacts_map">
+					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A488f95837c038515015b8e098fa81ca9ed8be95ef16f06aac35c447b2dd22f25&amp;width=&amp;height=&amp;lang=ru_UA&amp;scroll=true"></script>
 			</div>
 		</div>
 	</section>
-	<footer class="_footer _pagefooter clearfix">
+	<footer class="_footer _pagefooter">
 		<div class="_footer_left">
 			<span>© 2018. Джубга-хлеб.</span>
 		</div>
