--- a/dzhuzhba/company.html
+++ b/dzhuzhba/company.html
@@ -37,12 +37,12 @@
 						<div class="_header_main_menu">
 							<nav>
 								<ul>
-									<li><a href="/main.html">Главная</a></li>
-									<li><a href="#">О компании</a></li>
+									<li><a href="/index.html">Главная</a></li>
+									<li><a href="/company.html">О компании</a></li>
 									<li><a href="/news.html">Новости</a></li>
-									<li><a href="/index.html">Каталог</a></li>
+									<li><a href="/catalog.html">Каталог</a></li>
 									<li><a href="#">Прайс-лист</a></li>
-									<li><a href="#">Контакты</a></li>
+									<li><a href="/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -173,16 +173,16 @@
 		<div class="_footer_right">
 			<div class="_footer_right_menu">
 				<ul>
-					<li><a href="/main.html">Главная</a></li>
-					<li><a href="#">О компании </a></li>
-					<li><a href="#">Новости</a></li>
-					<li><a href="#">Каталог </a></li>
+					<li><a href="/index.html">Главная </a></li>
+					<li><a href="/company.html">О компании </a></li>
+					<li><a href="/news.html">Новости</a></li>
+					<li><a href="/catalog.html">Каталог </a></li>
 					
 				</ul>
 				<ul>
 					<li><a href="#">Спецпредложения</a></li>
 					<li><a href="#">Прайс-лист</a></li>
-					<li><a href="#">Контакты</a></li>
+					<li><a href="/contacts.html">Контакты</a></li>
 				</ul>
 				<small>Разработано в <a href="#">Студии Татьяны Кравец.</a></small>
 			</div>
