--- a/dzhuzhba/contacts.html
+++ b/dzhuzhba/contacts.html
@@ -37,12 +37,12 @@
 						<div class="_header_main_menu _contactsmenu">
 							<nav>
 								<ul>
-									<li><a href="/index.html">Главная</a></li>
-									<li><a href="/company.html">О компании</a></li>
-									<li><a href="/news.html">Новости</a></li>
-									<li><a href="/catalog.html">Каталог</a></li>
+									<li><a href="/dzhuzhba/index.html">Главная</a></li>
+									<li><a href="/dzhuzhba/company.html">О компании</a></li>
+									<li><a href="/dzhuzhba/news.html">Новости</a></li>
+									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
 									<li><a href="#">Прайс-лист</a></li>
-									<li><a href="/contacts.html">Контакты</a></li>
+									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -90,16 +90,16 @@ Viber: +7 918 680-09-03</span>
 		<div class="_footer_right">
 			<div class="_footer_right_menu">
 				<ul>
-					<li><a href="/index.html">Главная </a></li>
-					<li><a href="/company.html">О компании </a></li>
-					<li><a href="/news.html">Новости</a></li>
-					<li><a href="/catalog.html">Каталог </a></li>
+					<li><a href="/dzhuzhba/index.html">Главная </a></li>
+					<li><a href="/dzhuzhba/company.html">О компании </a></li>
+					<li><a href="/dzhuzhba/news.html">Новости</a></li>
+					<li><a href="/dzhuzhba/catalog.html">Каталог </a></li>
 					
 				</ul>
 				<ul>
 					<li><a href="#">Спецпредложения</a></li>
 					<li><a href="#">Прайс-лист</a></li>
-					<li><a href="/contacts.html">Контакты</a></li>
+					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
 				<small>Разработано в <a href="#">Студии Татьяны Кравец.</a></small>
 			</div>
