--- a/dzhuzhba/index.html
+++ b/dzhuzhba/index.html
@@ -35,12 +35,12 @@
 						<div class="_header_main_menu">
 							<nav>
 								<ul>
-									<li><a href="dzhuzhba/index.html">Главная</a></li>
-									<li><a href="dzhuzhba/company.html">О компании</a></li>
-									<li><a href="dzhuzhba/news.html">Новости</a></li>
-									<li><a href="dzhuzhba/catalog.html">Каталог</a></li>
+									<li><a href="/dzhuzhba/index.html">Главная</a></li>
+									<li><a href="/dzhuzhba/company.html">О компании</a></li>
+									<li><a href="/dzhuzhba/news.html">Новости</a></li>
+									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
 									<li><a href="#">Прайс-лист</a></li>
-									<li><a href="dzhuzhba/contacts.html">Контакты</a></li>
+									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -321,16 +321,16 @@
 </div>
 			<div class="_footer_right_menu">
 				<ul>
-					<li><a href="dzhuzhba/index.html">Главная </a></li>
-					<li><a href="dzhuzhba/company.html">О компании </a></li>
-					<li><a href="dzhuzhba/news.html">Новости</a></li>
-					<li><a href="dzhuzhba/catalog.html">Каталог </a></li>
+					<li><a href="/dzhuzhba/index.html">Главная </a></li>
+					<li><a href="/dzhuzhba/company.html">О компании </a></li>
+					<li><a href="/dzhuzhba/news.html">Новости</a></li>
+					<li><a href="/dzhuzhba/catalog.html">Каталог </a></li>
 					
 				</ul>
 				<ul>
 					<li><a href="#">Спецпредложения</a></li>
 					<li><a href="#">Прайс-лист</a></li>
-					<li><a href="dzhuzhba/contacts.html">Контакты</a></li>
+					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
 				<small>Разработано в <a href="#">Студии Татьяны Кравец.</a></small>
 			</div>
