--- a/dzhuzhba/catalog.html
+++ b/dzhuzhba/catalog.html
@@ -57,7 +57,7 @@
 			<h2>Каталог</h2>
 			<div class="row _news_allbest ">
 				<div class="col-md-4 _news_allbest_padd"><div class="_news_allbest_block">
-					<a href="#"><img src="img/categories/bread.png" alt=""><span href="#">Хлеб</span></a>
+					<a href="catalogbread.html"><img src="img/categories/bread.png" alt=""><span >Хлеб</span></a>
 				</div>
 				<p>Хлеб является основным из продуктов, которые каждодневно употребляет каждый из нас. Люди с древних времён почитали хлеб 
 и старались употреблять его как можно чаще.<br><br>
@@ -66,7 +66,7 @@
 </p>		
 				</div>
 				<div class="col-md-4 _news_allbest_padd"><div class="_news_allbest_block">
-					<a href="#"><img src="img/categories/cakes.png" alt=""><span href="#">Торты, пирожные</span></a>
+					<a href="catalogcake.html"><img src="img/categories/cakes.png" alt=""><span >Торты, пирожные</span></a>
 				</div>
 				<p>Заказывая торт Вы хотите получить не только красивый торт, но и вкусный, и так что бы его хватило на всех Ваших гостей! <br><br>
 
@@ -76,7 +76,7 @@
 с начинками!</p>
 				</div>
 				<div class="col-md-4 _news_allbest_padd"><div class="_news_allbest_block">
-					<a href="#"><img src="img/categories/cooperation.png" alt=""><span href="#">Булочки</span></a>
+					<a href="catalogbun.html"><img src="img/categories/cooperation.png" alt=""><span >Булочки</span></a>
 				</div>
 				<p>Одним из видов сдобных хлебобулочных изделий есть булочки с изюмом. Изобрёл их Иван Филиппов – представитель известнейшей русской династии хлебопёков, владелец нескольких булочных. Имея хорошую коммерческую жилку, он в своё время стал зачинателем многих нововведений в пекарском деле.<br><br>
 
