--- a/dzhuzhba/catalogbun.html
+++ b/dzhuzhba/catalogbun.html
@@ -41,7 +41,7 @@
 									<li><a href="/dzhuzhba/company.html">О компании</a></li>
 									<li><a href="/dzhuzhba/news.html">Новости</a></li>
 									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
-									<li><a href="#">Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
@@ -176,16 +176,16 @@
 		<div class="_footer_right">
 			<div class="_footer_right_menu">
 				<ul>
-					<li><a href="/main.html">Главная</a></li>
-					<li><a href="#">О компании </a></li>
-					<li><a href="#">Новости</a></li>
-					<li><a href="#">Каталог </a></li>
+					<li><a href="/dzhuzhba/index.html">Главная</a></li>
+					<li><a href="/dzhuzhba/company.html">О компании </a></li>
+					<li><a href="/dzhuzhba/news.html">Новости</a></li>
+					<li><a href="/dzhuzhba/catalog.html">Каталог </a></li>
 					
 				</ul>
 				<ul>
 					<li><a href="#">Спецпредложения</a></li>
-					<li><a href="#">Прайс-лист</a></li>
-					<li><a href="#">Контакты</a></li>
+					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
+					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
 				<small>Разработано в <a href="#">Студии Татьяны Кравец.</a></small>
 			</div>
