--- a/dzhuzhba/contacts.html
+++ b/dzhuzhba/contacts.html
@@ -41,7 +41,7 @@
 									<li><a href="/dzhuzhba/company.html">О компании</a></li>
 									<li><a href="/dzhuzhba/news.html">Новости</a></li>
 									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
-									<li><a href="#">Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
@@ -98,7 +98,7 @@ Viber: +7 918 680-09-03</span>
 				</ul>
 				<ul>
 					<li><a href="#">Спецпредложения</a></li>
-					<li><a href="#">Прайс-лист</a></li>
+					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
 				<small>Разработано в <a href="#">Студии Татьяны Кравец.</a></small>
