--- a/dzhuzhba/index.html
+++ b/dzhuzhba/index.html
@@ -39,7 +39,7 @@
 									<li><a href="/dzhuzhba/company.html">О компании</a></li>
 									<li><a href="/dzhuzhba/news.html">Новости</a></li>
 									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
-									<li><a href="#">Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
@@ -135,8 +135,20 @@
 					<li>Булочки</li>
 					<li>Торты</li>
 				</ul>
-				<div class="_listgoods_price">
-					<a href="#">Скачать прайс-лист «Хлеб»</a >
+				<div class="tabs__price active_price">
+					<div class="_listgoods_price">
+						<a href="/dzhuzhba/price/breadprice.txt" download>Скачать прайс-лист «Хлеб»</a >
+					</div>
+				</div>
+				<div class="tabs__price">
+					<div class="_listgoods_price">
+						<a href="/dzhuzhba/price/bunprice.txt" download>Скачать прайс-лист «Булочки»</a >
+					</div>
+				</div>
+				<div class="tabs__price">
+					<div class="_listgoods_price">
+						<a href="/dzhuzhba/price/cakeprice.txt" download>Скачать прайс-лист «Торты»</a >
+					</div>
 				</div>
 			</div>
 		</div>
@@ -329,7 +341,7 @@
 				</ul>
 				<ul>
 					<li><a href="#">Спецпредложения</a></li>
-					<li><a href="#">Прайс-лист</a></li>
+					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
 				<small>Разработано в <a href="#">Студии Татьяны Кравец.</a></small>
@@ -352,6 +364,21 @@ $(function() {
       .addClass('activve').siblings().removeClass('activve')
       .closest('div.tabs').find('div.tabs__content').removeClass('activve').eq($(this).index()).addClass('activve');
      $("._listgoods_slider").slick('setPosition'); 
+  });
+ 
+});
+
+</script>
+<script>
+	
+$(function() {
+ 
+  $('ul.tabs__caption').on('click', 'li:not(.active_price)', function() {
+
+    $(this)
+
+      .addClass('active_price').siblings().removeClass('active_price')
+      .closest('div.tabs').find('div.tabs__price').removeClass('active_price').eq($(this).index()).addClass('active_price');
   });
  
 });
