--- a/dzhuzhba/news.html
+++ b/dzhuzhba/news.html
@@ -41,7 +41,7 @@
 									<li><a href="/dzhuzhba/company.html">О компании</a></li>
 									<li><a href="/dzhuzhba/news.html">Новости</a></li>
 									<li><a href="/dzhuzhba/catalog.html">Каталог</a></li>
-									<li><a href="#">Прайс-лист</a></li>
+									<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 									<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 								</ul>
 							</nav>
@@ -91,7 +91,7 @@
 				</ul>
 				<ul>
 					<li><a href="#">Спецпредложения</a></li>
-					<li><a href="#">Прайс-лист</a></li>
+					<li><a href="/dzhuzhba/price/allprice.txt" download>Прайс-лист</a></li>
 					<li><a href="/dzhuzhba/contacts.html">Контакты</a></li>
 				</ul>
 				<small>Разработано в <a href="#">Студии Татьяны Кравец.</a></small>
